# AutoDepMocker_AddVariableMocking

./: .gitignore  Build.sh  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
Examples/: External.hpp  MySource.cpp  README.md
Examples/MockGenerated/: External.hpp
Scripts/: AutoDepMocker_YoctoCMake.py
Src/: Main.cpp
Src/CodeParser/: CustomASTConsumer.cpp  CustomASTConsumer.hpp  CustomASTVisitor.cpp  CustomASTVisitor.hpp  CustomFrontendAction.cpp  CustomFrontendAction.hpp  IMockGenerator.hpp  MockGeneratorTypes.hpp
Src/GMockClassGenerator/: CMockGenerator.cpp  CMockGenerator.hpp  CPPMockGenerator.cpp  CPPMockGenerator.hpp  Defines.hpp  EnumGenerator.cpp  EnumGenerator.hpp  FieldDeclarationGenerator.cpp  FieldDeclarationGenerator.hpp  GMockClassGenerator.cpp  GMockClassGenerator.hpp  GeneratorUtilities.cpp  GeneratorUtilities.hpp
